# python-web-crawler

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
