[tool.poetry]
name = "python-web-crawler"
version = "0.1.0"
description = ""
authors = ["nawawishkid <nawawishkid.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
